--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,13 @@
-# dependencies / build
+# dependencies
 node_modules/
+
+# build output
 dist/
 
-# local env files (never commit)
+# local env
 .env
-.env.local
-.env.*.local
+.env.*
+!.env.example
 
 # logs
 npm-debug.log*
@@ -15,8 +17,5 @@ pnpm-debug.log*
 
 # OS/editor
 .DS_Store
+Thumbs.db
 .vscode/
-
-# Supabase local artifacts
-supabase/.branches/
-supabase/.temp/
