push alarm setting

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,16 @@ VITE_USE_MOCK_API=false
 VITE_SUPABASE_URL=https://<project-ref>.supabase.co
 VITE_SUPABASE_ANON_KEY=<anon-public-key>
 VITE_SUPABASE_FUNCTIONS_BASE=https://<project-ref>.supabase.co/functions/v1/make-server-7fb946f4
+
+# Web Push (PWA). Generate VAPID keys and put the public key here.
+VITE_VAPID_PUBLIC_KEY=<vapid-public-key>
+
+# Server (Supabase Edge Function) secrets
+# These are NOT VITE_ vars. Set them in Supabase Dashboard (Edge Functions → Secrets)
+# or via CLI: npx supabase secrets set --project-ref <project-ref> KEY=VALUE ...
+#
+# Required for background push:
+#   VAPID_PUBLIC_KEY=<vapid-public-key>
+#   VAPID_PRIVATE_KEY=<vapid-private-key>
+#   VAPID_SUBJECT=mailto:you@example.com
+#   CRON_SECRET=<long-random-secret>
