--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.1",
   "type": "module",
   "scripts": {
+    "prebuild": "node scripts/generate-pwa-icons.mjs",
     "build": "node ./node_modules/vite/bin/vite.js build",
     "dev": "node ./node_modules/vite/bin/vite.js",
     "populate-presets": "node scripts/populate-preset-schedules.js",
@@ -76,6 +77,7 @@
   "devDependencies": {
     "@tailwindcss/vite": "4.1.12",
     "@vitejs/plugin-react": "4.7.0",
+    "sharp": "^0.34.3",
     "supabase": "^2.70.5",
     "tailwindcss": "4.1.12",
     "vite": "6.3.5",
