--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "test:supabase-flow": "node scripts/test-supabase-flow.mjs",
     "test:multi-reading-progress": "node scripts/test-multi-reading-progress.mjs",
     "test:share-plan": "node scripts/test-share-plan.mjs",
-    "deploy:functions": "supabase functions deploy make-server-7fb946f4 --no-verify-jwt"
+    "deploy:functions": "supabase functions deploy make-server-7fb946f4 --no-verify-jwt",
+    "test": "vitest",
+    "test:run": "vitest run"
   },
   "dependencies": {
     "@bibletags/bibletags-versification": "^2.1.0",
@@ -78,11 +80,13 @@
   "devDependencies": {
     "@tailwindcss/vite": "4.1.12",
     "@vitejs/plugin-react": "4.7.0",
+    "jsdom": "^27.4.0",
     "sharp": "^0.34.3",
     "supabase": "^2.70.5",
     "tailwindcss": "4.1.12",
     "vite": "6.3.5",
-    "vite-plugin-pwa": "^0.21.2"
+    "vite-plugin-pwa": "^0.21.2",
+    "vitest": "^4.0.16"
   },
   "peerDependenciesMeta": {},
   "pnpm": {
