--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,6 @@
     },
     "types": ["vite/client"]
   },
-  "include": ["src", "vite.config.ts"],
+  "include": ["src", "vite.config.ts", "utils"],
   "exclude": ["supabase", "dist", "node_modules"]
 }
