--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test:supabase-flow": "node scripts/test-supabase-flow.mjs",
     "test:multi-reading-progress": "node scripts/test-multi-reading-progress.mjs",
     "test:share-plan": "node scripts/test-share-plan.mjs",
+    "verify:chapter-counts": "node scripts/verify-chapter-counts.mjs plan_schedules 30",
     "deploy:functions": "supabase functions deploy make-server-7fb946f4 --no-verify-jwt",
     "test": "vitest",
     "test:run": "vitest run"
