--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "prebuild": "node scripts/generate-pwa-icons.mjs",
     "build": "node ./node_modules/vite/bin/vite.js build",
+    "cap:sync": "npm run build && npx cap sync",
+    "cap:open:android": "npx cap open android",
     "dev": "node ./node_modules/vite/bin/vite.js",
     "lint": "eslint src",
     "lint:fix": "eslint src --fix",
@@ -21,6 +23,15 @@
   },
   "dependencies": {
     "@bibletags/bibletags-versification": "^2.1.0",
+    "@capacitor-community/sqlite": "^7.0.2",
+    "@capacitor/app": "^7.0.2",
+    "@capacitor/android": "^8.0.2",
+    "@capacitor/core": "^8.0.2",
+    "@capacitor/local-notifications": "^7.0.2",
+    "@capacitor/network": "^7.0.2",
+    "@capacitor/push-notifications": "^7.0.2",
+    "@capacitor/splash-screen": "^7.0.2",
+    "@capacitor/status-bar": "^7.0.2",
     "@emotion/react": "11.14.0",
     "@emotion/styled": "11.14.1",
     "@mui/icons-material": "7.3.5",
@@ -82,6 +93,7 @@
     "zustand": "^4.5.0"
   },
   "devDependencies": {
+    "@capacitor/cli": "^8.0.2",
     "@eslint/js": "^9.39.2",
     "@tailwindcss/vite": "4.1.12",
     "@vitejs/plugin-react": "4.7.0",
@@ -93,7 +105,6 @@
     "tailwindcss": "4.1.12",
     "typescript-eslint": "^8.52.0",
     "vite": "6.3.5",
-    "vite-plugin-pwa": "^0.21.2",
     "vitest": "^4.0.16"
   },
   "peerDependenciesMeta": {},
